# pyfaultdiagnosistoolbox

./: .clang-format  .clang-tidy  .env  .gitignore  .readthedocs.yaml  1.Dockerfile  2010.Dockerfile  2014.Dockerfile  CMakeLists.txt  Dockerfile  Dockerfile_linux_aarch64  Dockerfile_linux_x86  MANIFEST.in  Makefile  README.md  TODO.txt  compile_requirements.txt  linux_build.sh  linux_create_wheels.sh  macos_build.sh  main.ipynb  pyproject.toml  setup.cfg  setup.py  windows_build.bat
.ipynb_checkpoints/: FTClab-checkpoint.ipynb
Docker/: Dockerfile_linux_aarch64  Dockerfile_linux_x86  log.txt
Engine/: BatchFaultIsolation.cc  GetMeasurementData.py  Makefile  VEP4Engine.ipynb  VEP4Engine.py  VEP_par.py  diagutil.py  engine_main.py  extmodelfuns.h  extmodelfuns.py  resgendebug.ipynb  setup.py  speedtest.py
Misc/: misc.py
Models/: ThreeTank_model.py  ThreeTank_model_sym.py  VEP4Engine.py
build_scripts/: linux_build.sh  macos_build.sh
code_examples/: Commault.py
code_examples/ThreeTankSimulation/: TankSimulation.py
docs/: basicusage.rst  conf.py  faultdiagnosistoolbox.rst  index.rst  introduction.rst  requirements-doc.txt  usecase.rst
docs/examples/: TankSimulation.py  examples.rst  induction_machine.ipynb  structure_only_sensorplacement.ipynb  three_tank.ipynb
examples/: Commault.ipynb  Commault.py  ElectricMotor.ipynb  ElectricMotor.py  InductionMotor.ipynb  InductionMotor.py  SmallLinear.ipynb  SmallLinear.py
examples/TestSelection/: main.ipynb
examples/ThreeTankSimulation/: Makefile  main.ipynb  main.py
faultdiagnosistoolbox/mytest/: DiagnosisModel.py
lab/: Cilinder_servo_valve.ipynb  Cilinder_servo_valve.py  MTES.ipynb  MTES.py  PEMFCModel.py  dmperm_tst.py  em_test.py  fuelcell_main.py  main.ipynb  main_codegen.ipynb  main_sa.ipynb  panelides.py  pendulum_debug.py  sensplace_debug.py  sensplace_lab.ipynb  test.py  ttm_for_docs.py
lab/test_selection/: main.ipynb  testselection.py
py3_test/: Makefile  Xengine.txt  main_sa.ipynb  setup3.py  setup_test.py  structuralanalysis3module.cc  testmodule.c
py3_test/.ipynb_checkpoints/: main_sa-checkpoint.ipynb
src/: LICENSE  MANIFEST.in  MHS_lab.ipynb  Makefile  Makefile.win  README.md  VEP4Engine.ipynb  log.txt  main.ipynb  main_codegen.ipynb  main_sa.ipynb  sensplace_lab.ipynb  setup.py
src/Engine/: .gitignore  BatchFaultIsolation.cc  VEP4Engine.ipynb  VEP_par.py  engine_main.py  extmodelfuns.cc  extmodelfuns.h  setup.py
src/Misc/: misc.py
src/Models/: ThreeTank_model.py
src/examples/: ElectricMotor.py  InductionMotor.py
src/faultdiagnosistoolbox/: CodeGeneration.py  DiagnosisModel.py  MHS.py  Makefile  Matching.py  PlotDM.py  SensorPlacement.py  SparseMatrix.cc  StructPlots.py  StructuralAnalysisModel.cc  StructurePlotting.py  TestSelection.py  VarIdGen.py  __init__.py  _version.py  diag_util.py  dmperm.py  setup.py  structuralanalysismodule.c  structuralanalysismodule.cc  testselection_rf.py
src/lab/: fuelcell_main.py
src/src_extension/: .gitignore  MSOAlg.cc  SparseMatrix.h  dmpermlib.cc  test.py
src/tests/: basic_test.py  electric_motor_test.py  electricmotor_model.py  sensplace_test.py  watertank_model.py  watertank_test.py
src_extension/: MSOAlg.h  SparseMatrix.cc  StructuralAnalysisModel.cc  StructuralAnalysisModel.h
src_old/faultdiagnosistoolbox/: DiagnosisModel.py  MHS.py  Makefile  dmperm.py  (+1 more)
tests/: basic_test.py  electric_motor_test.py  mso_differential_order_test.py  msodifferentialorder_test.py  sensplace_test.py  watertank_model.py  watertank_test.py
(+19 files in other folders)
