[build-system]
requires = ["setuptools>=61.0", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "faultdiagnosistoolbox"
version = "0.12.5.dev1"
authors = [
  { name="Erik Frisk", email="erik.frisk@liu.se" },
]
dependencies=['sympy', 'numpy', 'scipy', 'matplotlib', 'scikit-learn']
description = "A toolbox for Model Based Fault Diagnosis of dynamic systems based on structural analysis"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering"
]

[project.urls]
"Homepage" = "https://faultdiagnosistoolbox.github.io"
